[package]
name = "rustopals"
version = "0.1.0"
authors = ["Ãlvaro Cuesta <1827495+alvaro-cuesta@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
base64 = "0.13.0"
num-traits = "0.2.14"
itertools = "0.10.0"
rand = "0.8.3"
byteorder = "1.4.3"
rand_core = "0.6.2"
num-bigint = { version = "0.4.0", features = ["rand"] }
