[package]
name = "rustopals"
version = "0.1.0"
description = "Solutions for Cryptopals Crypto Challenges (https://cryptopals.com/)"
keywords = ["crypto", "cryptography", "cryptopals", "challenge"]
categories = ["cryptography"]
repository = "https://github.com/alvaro-cuesta/rustopals/"
documentation = "https://alvaro-cuesta.github.io/rustopals/rustopals/"
readme = "README.md"
authors = ["Álvaro Cuesta <1827495+alvaro-cuesta@users.noreply.github.com>"]
edition = "2018"
publish = false

[dependencies]
hex = "0.4.3"
base64 = "0.13.0"
num-traits = "0.2.14"
itertools = "0.10.0"
rand = "0.8.3"
byteorder = "1.4.3"
rand_core = "0.6.2"
num-bigint = { version = "0.4.0", features = ["rand"] }
